--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">.3
 </head>
 <body>
   <canvas id="canvas1"></canvas>
+  <div id="train">
+    <div class="header">Train</div>
+    <div class="trainButtons">
+      <button id="buttonTrainAdd">Add</button>
+      <button id="buttonTrainEdit">Edit</button>
+      <button id="buttonTrainDelete">Delete</button>
+    </div>
+    <div id="newTrain" style="display:none">
+      <div>Train Name</div><input type="text" placeholder="train name" id="trainName">
+      <div>Train Color</div>
+      <div>
+        <input type="radio" name="trainColor" id="black" value="black" checked  >
+        <label for="black">black</label>
+        <input type="radio" name="trainColor" id="blue" value="blue">
+        <label for="blue">blue</label>
+        <input type="radio" name="trainColor" id="red" value="red">
+        <label for="red">red</label>
+        <input type="radio" name="trainColor" id="brown" value="brown">
+        <label for="brown">brown</label>
+        <input type="radio" name="trainColor" id="pink" value="pink">
+        <label for="pink">pink</label>
+      </div>
+      <div>Train Length</div><input type="number" min="1" max="20" id="trainLength">
+      <div>Route(Control-Click points,Escape after last ponint)</div><button id="buttonTrainRoute">Route</button>
+      <div><button id="buttonTrainAddOk">OK</button><button id="buttonTrainAddCancel">Cancel</button></div>
+    </div>
+  </div> 
   <assets id="assets"></assets>
+  <script src="game.js"></script>
+  <script src="train.js"></script>
+  <script src="trains.js"></script>
+  <script src="route.js"></script>
+  <script src="routes.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
