Lots of useless changes and additions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
   <canvas id="background"></canvas>
+  <canvas id="guide"></canvas>
   <canvas id="canvas1"></canvas>
+  <div id="finances">
+    <label for="">Income</label><div id="income">###</div>  
+    <label for="">Cost</label><div id="cost">###</div>  
+    <label for="">Profit/Loss</label><div id="profitorloss">###</div>  
+  </div>
   <div id="train">
     <div class="header">Train</div>
     <div class="trainButtons">
@@ -44,6 +50,12 @@
     </div>
   </div> 
   <assets id="assets"></assets>
+  <script src="farms.js"></script>
+  <script src="finances.js"></script>
+  <script src="waterbody2.js"></script>
+  <script src="waterbody.js"></script>
+  <script src="waterbodies.js"></script>
+  <script src="waterbodies2.js"></script>
   <script src="game.js"></script>
   <script src="train.js"></script>
   <script src="trains.js"></script>
