Added forests and mountains

--- a/index.html
+++ b/index.html
@@ -48,13 +48,18 @@
       <div>Route(Control-Click points,Escape after last ponint)</div><button id="buttonTrainRoute">Route</button>
       <div><button id="buttonTrainAddOk">OK</button><button id="buttonTrainAddCancel">Cancel</button></div>
     </div>
-  </div> 
+  </div>
+  <img id='forest' style="display:none"> 
+  <img id='mountain' style="display:none"> 
   <assets id="assets"></assets>
+  <script src="forest.js"></script>
+  <script src="mountain.js"></script>
+  <script src="industry.js"></script>
+  <script src="industries.js"></script>
+  <script src="farm.js"></script>
   <script src="farms.js"></script>
   <script src="finances.js"></script>
   <script src="waterbody2.js"></script>
-  <script src="waterbody.js"></script>
-  <script src="waterbodies.js"></script>
   <script src="waterbodies2.js"></script>
   <script src="game.js"></script>
   <script src="train.js"></script>
