Made a number of changes including Train2

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <canvas id="guide"></canvas>
   <canvas id="canvas1"></canvas>
   <div id="finances">
-    <label for="">Income</label><div id="income">###</div>  
-    <label for="">Cost</label><div id="cost">###</div>  
-    <label for="">Profit/Loss</label><div id="profitorloss">###</div>  
+    <label for="income">Income</label><div id="income">###</div>  
+    <label for="cost">Cost</label><div id="cost">###</div>  
+    <label for="profitorloss">Profit/Loss</label><div id="profitorloss">###</div>  
   </div>
   <div id="train">
     <div class="header">Train</div>
@@ -52,6 +52,7 @@
   <img id='forest' style="display:none"> 
   <img id='mountain' style="display:none"> 
   <assets id="assets"></assets>
+  <script src="train2.js"></script>
   <script src="forest.js"></script>
   <script src="mountain.js"></script>
   <script src="industry.js"></script>
