Started working on multiple coaches

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <canvas id="guide"></canvas>
   <canvas id="canvas1"></canvas>
   <div id="finances">
-    <label for="income">Income</label><div id="income">###</div>  
-    <label for="cost">Cost</label><div id="cost">###</div>  
-    <label for="profitorloss">Profit/Loss</label><div id="profitorloss">###</div>  
+    <div>Income</div>
+    <div id="income">###</div>  
+    <div>Cost</div>
+    <div id="cost">###</div>  
+    <div>Profit/Loss</div>
+    <div id="profitorloss">###</div>  
   </div>
   <div id="train">
     <div class="header">Train</div>
@@ -52,6 +55,7 @@
   <img id='forest' style="display:none"> 
   <img id='mountain' style="display:none"> 
   <assets id="assets"></assets>
+  <script src="coach.js"></script>
   <script src="train2.js"></script>
   <script src="forest.js"></script>
   <script src="mountain.js"></script>
